--- a/sites/all/themes/herne_hill/sass/components/_controls.sass
+++ b/sites/all/themes/herne_hill/sass/components/_controls.sass
@@ -15,16 +15,17 @@
 .pane-node-links
   margin-top: 1.5em
   margin-bottom: 3em
+  a
+    white-space: nowrap
+
 
 .service-links-facebook,
 .service-links-twitter,
 .service-links-google-plus,
 .forward_link
   padding-right: 0
-  // li.inline
-  //   background-color: red
   a
     display: inline-block
-    @include input-button-style
     padding: 5px 10px
     margin: 0.5em 0
+    @include input-button-style
